fixes for navbar being covered by toolbar and removing fix for toolbar coverage - need to find a better solution for this

--- a/tapas_redesign/assets/sass/overrides.scss
+++ b/tapas_redesign/assets/sass/overrides.scss
@@ -739,6 +739,6 @@ table {
 .main-container{
   padding-bottom:0;
   @media(max-width:$screen-xs-max){
-    margin-left:1.8em;
+    // margin-left:1.8em;
   }
 }
