--- a/tapas_redesign/assets/sass/templates/navbar.scss
+++ b/tapas_redesign/assets/sass/templates/navbar.scss
@@ -95,8 +95,12 @@
 }
 
 @media(max-width:$screen-sm-min){
+  #block-menu-menu-primary-menu .nav{
+    padding-left:35px;
+  }
   #block-system-user-menu{
     clear:both;
+    padding-left:35px;
     ul.menu.nav{
       margin:0;
     }
